--- a/MODUL14/style.css
+++ b/MODUL14/style.css
@@ -30,6 +30,23 @@ input:out-of-range{
 main p:first-child {
   background-color: aqua;
 }
-a:hover{
+#link:hover{
      background-color: blueviolet;
+}
+nav a{
+    padding: 20px;
+    margin: 20px;
+}
+nav{
+   background-color: rgb(81, 81, 155);
+   padding: 20px;
+}
+nav a:hover{
+   background-color: rgb(62, 62, 230);
+}
+nav a.active{
+   background-color: rgb(62, 196, 230);
+}
+nav a:visited{
+   color: rgb(204, 218, 9);
 }
