--- a/modul15/style.css
+++ b/modul15/style.css
@@ -70,4 +70,70 @@ div#div3{
 }
 #vertikal ul li a:hover{
     background-color: rgb(29, 27, 27);
+}
+#dropdown{
+    overflow: hidden;
+    background-color: blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 } 
+
+#dropdown a{
+    float: left;
+    font-size: 10px;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    text-decoration: none;
+}
+
+#nav-dropdown{
+    float: left;
+    overflow: hidden;
+}
+
+#dropdownbtn{
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 15px;
+    background-color: inherit;
+    font: inherit;
+
+
+}
+
+#dropdown a:hover, #nav-dropdown:hover{
+    background-color: rgb(123, 88, 156);
+}
+#dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: aliceblue;
+    width: 100%;
+    box-shadow: 10px black;
+}
+
+#column{
+    float: left;
+    width: 50%;
+    padding: 10px;
+    background-color: rgb(248, 249, 250);
+    height: 250px;
+
+}
+#column a{
+    float: none;
+    color: aliceblue;
+    padding: 15px;
+    text-decoration: none;
+    text-align: left;
+    display: block;
+}
+#nav-dropdown:hover #dropdown-content{
+    display: block;
+}
+
+#row::after{
+    display: table;
+}
