--- a/PERSERITJE2/style.css
+++ b/PERSERITJE2/style.css
@@ -5,6 +5,21 @@ body{
 }
 
 nav{
-    background-color: rgb(81, 81, 155);
+    display: inline;
+   background-color: rgb(255, 255, 255);
    padding: 20px;
+   width: 100%;
+}
+
+nav ul{
+    list-style: none;
+}
+
+#baner{
+    width: 100%;
+    height: auto;
+}
+#slogan{
+    text-align: center;
+    color: white;
 }
