--- a/perseritje3/style.css
+++ b/perseritje3/style.css
@@ -51,3 +51,82 @@ body{
     border-radius: 20px;
 }
 
+.hero{
+    text-align: center;
+    padding: 70px 0;
+    background: linear-gradient(180deg, var(--bg), var(--bg-2));
+}
+
+#hero_title{
+    font-size: 40px;
+    margin: 15px;
+
+}
+ 
+#hero_p{
+    font-size: 20px;
+    color: var(--text2)
+}
+
+#hero_img{
+    margin: 0 50px;
+}
+
+.container{
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ gap: 50px;
+ margin: 30px;
+text-align: center;
+}
+
+.stats_value{
+font-size: 20px;
+font-weight: bold;
+}
+
+.stats_label{
+    color: var(--text);
+  
+}
+
+.stats{
+    border: 1px solid var(--border);
+    padding: 20px;
+    border-radius: 10px;
+    width: 150px;    
+}
+#bestsellers_title{
+    font-size: 50px;
+    color: var(--text);
+    text-align: center;
+}
+
+#product-grid{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px;
+}
+
+#product-grid img{
+    width: 400px;
+    height: 200px;
+}
+
+.product-card{
+    border: 1px solid var(--border);
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    background: var(--bg-2);
+}
+
+.product-card button{
+     font-size: 15px;
+    padding:5px 10px;
+    color: var(--text);
+    background: var(--bg);
+}
